JumpScript/tests/baselines/reference/selfReferencingFile.errors.txt
tests/cases/compiler/selfReferencingFile.jump(1,21): error TS1006: A file cannot have a reference to itself.


==== tests/cases/compiler/selfReferencingFile.jump (1 errors) ====
    ///<reference path='selfReferencingFile.jump'/>
                        ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1006: A file cannot have a reference to itself.
    
    class selfReferencingFile {
    
    }